# SMolDock

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.bak  README.md  codecov.yaml  main.cpp  pybindings_example.py  runCoverage.sh
CMakeModules/: CodeCoverage.cmake
Dependencies/ESBTL/: line_reader.h  molecular_system.h
Docker/: build_install.dockerfile  build_test_install.dockerfile
DockingTests/COX2_Ibuprofen/: 4PH9_COX2_without_Ibuprofen.pdbqt  SMOLDOCK_BestLBFGS.pdbqt  VINA_3LN1_Ibuprofen.conf  VINA_3LN1_Ibuprofen.ligand.pdbqt  VINA_3LN1_Ibuprofen.receptor.pdbqt  VINA_3LN1_Ibuprofen_cleanedup.pdbqt  VINA_Cox2_BestRes.pdbqt  VINA_Cox2_BestRes_Charged.mol2  VINA_cox2.conf  VINA_cox2.pdbqt  VINA_cox2_log.txt
DockingTests/Tripeptide/: Ibuprofen.pdbqt  Tripeptide.pdbqt  VINA_bestres.pdbqt  VINA_tripeptide.conf  VINA_tripeptide.pdbqt  VINA_tripeptide_log.txt
DockingTests/hCES1/: BENZIL.pdbqt  BENZIL_SplitRes_1.pdbqt  BENZIL_VinaBest.mol2  BENZIL_VinaBest_2.mol2  BENZIL_predock.pdbqt  BENZIL_predock.sdf  hCES1_inhib_Ki_ChEMBL.csv  test_rot.pdbqt
Docs/: Makefile
Docs/html/: _abstract_docking_engine_8h.html  _abstract_docking_engine_8h__dep__incl.map  _abstract_docking_engine_8h__dep__incl.md5  _abstract_docking_engine_8h__incl.map  _abstract_docking_engine_8h__incl.md5  _abstract_docking_engine_8h_source.html  _amino_acid_8cpp.html  _amino_acid_8cpp.js  _amino_acid_8cpp__incl.map  _amino_acid_8cpp__incl.md5  _amino_acid_8cpp_source.html  _amino_acid_8h.html  _amino_acid_8h__dep__incl.map  _amino_acid_8h__dep__incl.md5  _amino_acid_8h__incl.map  _amino_acid_8h__incl.md5  _amino_acid_8h_source.html  _atom_8cpp.html  _atom_8cpp.js  _atom_8cpp__incl.map  _atom_8cpp__incl.md5  _atom_8cpp_source.html  _atom_8h.html  _atom_8h.js  _atom_8h__dep__incl.map  _atom_8h__dep__incl.md5  _atom_8h__incl.map  _atom_8h__incl.md5  _atom_8h_source.html  _bond_8cpp.html  _bond_8cpp__incl.map  _bond_8cpp__incl.md5  _bond_8cpp_source.html  _bond_8h.html  _bond_8h__dep__incl.map  _bond_8h__dep__incl.md5  _bond_8h__incl.map  _bond_8h__incl.md5  _bond_8h_source.html  _conformer_rigid_docking_engine_8cpp.html  (+270 more)
Docs/source/: conf.py  index.rst
Docs/xml/: _abstract_docking_engine_8h.xml  _amino_acid_8cpp.xml  _amino_acid_8h.xml  _atom_8cpp.xml  _atom_8h.xml  _bond_8cpp.xml  _bond_8h.xml  _conformer_rigid_docking_engine_8cpp.xml  _conformer_rigid_docking_engine_8h.xml  _docking_result_8cpp.xml  _docking_result_8h.xml  _docking_result_printer_8cpp.xml  _docking_result_printer_8h.xml  _m_d_style_docking_engine_8cpp.xml  _m_d_style_docking_engine_8h.xml  _molecule_8cpp.xml  _molecule_8h.xml  _molecule_traversal_8cpp.xml  _molecule_traversal_8h.xml  _protein_8cpp.xml  _protein_8h.xml  _structure_8cpp.xml  _structure_8h.xml  _vina_compatible_docking_engine_8cpp.xml  _vina_compatible_docking_engine_8h.xml  class_smol_dock_1_1_amino_acid.xml  class_smol_dock_1_1_atom.xml  class_smol_dock_1_1_bond.xml  class_smol_dock_1_1_docking_result.xml  class_smol_dock_1_1_docking_result_printer.xml  class_smol_dock_1_1_engine_1_1_abstract_docking_engine.xml  class_smol_dock_1_1_engine_1_1_conformer_rigid_docking_engine.xml  class_smol_dock_1_1_engine_1_1_m_d_style_docking_engine.xml  class_smol_dock_1_1_engine_1_1_vina_compatible_docking_engine.xml  class_smol_dock_1_1_molecule.xml  class_smol_dock_1_1_molecule_traversal.xml  class_smol_dock_1_1_protein.xml  class_smol_dock_1_1_structure.xml  dir_238e222dc7cada3799d91028ff67fcc5.xml  dir_29b6d8349828f3fd4c784faff1564e9a.xml  (+14 more)
Engines/: AbstractDockingEngine.cpp  AbstractDockingEngine.h  ConformerDockingEngine.cpp  ConformerDockingEngine.h  ConformerRigidDockingEngine.cpp  ConformerRigidDockingEngine.h  MDStyleDockingEngine.cpp  MDStyleDockingEngine.h  PoseRefiner.cpp  PoseRefiner.h  VinaCompatibleDockingEngine.cpp  VinaCompatibleDockingEngine.h
Engines/DockingBoxUtils/: ExtractProteinFromBox.hpp
Engines/GlobalHeuristics/: DifferentialEvolution.cpp  DifferentialEvolution.h  Evolution.cpp  Evolution.h  HeuristicFactory.cpp  HeuristicFactory.h  HeuristicInterface.h  IteratedLocalSearch.cpp  IteratedLocalSearch.h  OnlyLocal.cpp  OnlyLocal.h  RandomRestart.cpp  RandomRestart.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h
Engines/Internals/: InternalsUtilityFunctions.h  iAtom.cpp  iAtom.h  iConformer.cpp  iConformer.h  iProtein.cpp  iProtein.h  iTransform.h
Engines/LocalOptimizers/: GradientDescentLineSearch.cpp  GradientDescentLineSearch.h  L_BFGS.cpp  L_BFGS.h  LocalOptimizerUtilityFunctions.h  OptimizerFactory.cpp  OptimizerFactory.h  OptimizerInterface.h
Engines/Math/: GradientCalculator.cpp  GradientCalculator.h
Engines/Optimizers/: GradientDescentLineSearch.cpp  GradientDescentLineSearch.h
Engines/ScoringFunctions/: BasicScoringFunction.cpp  BasicScoringFunction.h  ScoringFunctionFactory.cpp  ScoringFunctionFactory.h  ScoringFunctionInterface.h  VinaLike.cpp  (+11 more)
Frontends/: CLI_frontend.cpp  FrontendCommon.h  SmoldockPythonBindings.cpp  cli_interface.cpp  goldenRecordGenerator.cpp  main.cpp  mpicalibrator.cpp  vina_refiner.cpp
ImplementationDetails/: SimulatedAnnealing_ParamFitting.txt
Structures/: AminoAcid.cpp  AminoAcid.h  Atom.cpp  Atom.h  Bond.cpp  Bond.h  Molecule.cpp  Molecule.h  Protein.cpp  Protein.h  Structure.cpp  Structure.h
UnitTests/: CMakeLists.txt  UnitTestHelper.cpp  UnitTestHelper.h  engine_test_suite.cpp  main_test_suite.cpp
UnitTests/Engines/: DockingBoxUtils_test_suite.cpp
UnitTests/Fixtures/: TripeptideFixture.cpp  TripeptideFixture.hpp
Utilities/: AdvancedErrorHandling.cpp  AdvancedErrorHandling.h  CSVReader.cpp  CSVReader.h  DockingResultPrinter.cpp  DockingResultPrinter.h  IntermediateConformerCollector.cpp  IntermediateConformerCollector.h  LogUtils.h  MoleculeTraversal.cpp  MoleculeTraversal.h  PDBLigandUtils.cpp  PDBLigandUtils.h  PDBWriter.cpp  PDBWriter.h  ReScorer.cpp  ReScorer.h  SMARTSMatcher.cpp  SMARTSMatcher.h  TimingsLog.h  Version.cpp  Version.h
docs/: BuildSmoldock.md  CovalentReversibleDocking.md  StaticBuild.md  UsingPythonModule.md  VinaCompatibility.md  index.md
(+1855 files in other folders)
